# CLog

./: .travis.yml  CMakeLists.txt
cmake/: config.cmake.in
src/: Logger.cpp
